Update pizza_cli_app/api, server/app. Добавил обработку запросов на изменение учётных данных.
